syntax = "proto3";

package ua.pomo.catalog.api;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "validate/validate.proto";
import "google/protobuf/field_mask.proto";

message Category {
  option (google.api.resource) = {
    type: "api.pomo.ua/Category"
    pattern: "categories/{category}"
  };
  string name = 1;
  string uid = 2;
  string readable_id = 3 [(validate.rules).string.min_len = 1];
  string display_name = 4 [(validate.rules).string.min_len = 1];
  string description = 5 [(validate.rules).string.min_len = 1];
}

message CreateCategoryRequest {
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "api.pomo.ua/Category"
    }
  ];
  Category category = 2 [
    (validate.rules).message.required = true
  ];

  // The ID to use for the category, which will become the final component of
  // the book's resource name.
  //
  // This value should be UUID_V4
  string category_id = 3;
}

message GetCategoryRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "api.pomo.ua/Category"
    }];
}

message UpdateCategoryRequest {
  Category category = 1 [
    (validate.rules).message.required = true
  ];

  // The list of fields to update.
  google.protobuf.FieldMask update_mask = 2 [
    (validate.rules).message.required = true
  ];
}

message DeleteCategoryRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "api.pomo.ua/Category"
    }
  ];
}

message ListCategoriesRequest {
  // The parent resource name, for example, "categories/category1".
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "api.pomo.ua/Category"
    }
  ];

  // The maximum number of items to return.
  int32 page_size = 2 [
    (validate.rules).int32.gte = 0
  ];

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListCategoriesResponse {
  //There will be a maximum number of items returned based on the page_size field
  // in the request.
  repeated Category categories = 1;

  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}
